@@ -246,6 +246,7 @@ cd $JLAB_ROOT/devel/install
 ./go_clhep
 ./go_xercesc
 ./go_qt
+(see notes below on non system-qt installation)
 ./go_geant4
 ./go_sconsscript
 ./go_evio
@@ -296,6 +297,8 @@ cd $JLAB_ROOT/devel/install
 	&#8226; The JLab environment is setup to use the system installation of Qt. If you want to install qt using their offline installer, set the environment variable QT_VERSION:
 	<pre><code>
 setenv QT_VERSION 5.10.1
+source $JLAB_ROOT/devel/ce/jlab.csh keepmine
+
 	</code></pre>
   <br><br><br>
 
