@@ -7,6 +7,7 @@
 - preparing Announcement for 2.3
 - setting wget command is different on Linux or Darwin. Moving -qc and show-progress options to a shell variable mwget
 - xercesc: in linux, linking lib64 to lib. Why oh why they keep doing this.
+- fixes to go_qt script offline installer, and go_geant4 repo name
 
 9/24/18
 - formatting go_tar exclude from tar
